<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoL Stats</string>
    <string name="action_settings">Settings</string>
    <string name="summ_name">Please enter summoner name:</string>
    <string name="lookup_sum">Look up</string>
    <string name="hello_world">Hello world!</string>
    <string name="kills_text">Kills:</string>
    <string name="deaths_text">Deaths:</string>
    <string name="assist_text">Assist:</string>
    <string name="wins_text">Wins:</string>
    <string name="losses_text">Losses:</string>
    <string name="doubles_text">Double Kills:</string>
    <string name="triples_text">Triple Kills:</string>
    <string name="quadra_text">Quadra Kills:</string>
    <string name="pentas_text">Penta Kills:</string>
    <string name="minions_text">Minions Killed:</string>
    <string name="turrets_text">Turrets Killed:</string>
    <string name="masteries_text">Masteries</string>
    <string name="runes_text">Runes</string>
    <string name="sum_name_text">Summoner Name</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="title_activity_rune">RuneActivity</string>
    <string name="bad_name_text">Summoner name not valid.</string>
    <string name="title_activity_mastery">MasteryActivity</string>
    <string name="title_activity_rune_detail">RuneDetailActivity</string>

</resources>
