<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InfoActivity" >

    <TextView
        android:id="@+id/txtSummonerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/sum_name_text"
        android:textSize="10pt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtSummonerName"
        android:layout_marginTop="76dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtKills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kills_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtDeaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deaths_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtAssists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assist_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtDoubles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doubles_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtTriples"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/triples_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtQuadras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quadra_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtPentas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pentas_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtWins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wins_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtLosses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/losses_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtMinions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minions_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtTurrets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turrets_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <Button
        android:id="@+id/btnRunes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnMasteries"
        android:text="@string/runes_text"
        android:textSize="6pt" />

    <Button
        android:id="@+id/btnMasteries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/masteries_text"
        android:textSize="6pt" />

</RelativeLayout>